fix bugs popup & like-visible

--- a/src/blocks/card/__like-btn/card__like-btn.css
+++ b/src/blocks/card/__like-btn/card__like-btn.css
@@ -1,7 +1,7 @@
 .card__like-btn{
   border: none;
   /*border: 1px solid #0f0;*/
-  margin: 0 20px 0 0;
+  margin: 0 auto;
   height: 19px;
   width: 22px;
   background-image: url(../../../images/like.svg);
