--- a/src/blocks/card/__like-count/card__like-count.css
+++ b/src/blocks/card/__like-count/card__like-count.css
@@ -1,5 +1,8 @@
 .card__like-count{
   border: 1px solid red;
-  height: 5px;
-  width: 5px;
+  height: 13px;
+  width: 10px;
+  margin: 0 auto;
+  color: #000;
+  line-height: 16px;
 }
