--- a/src/blocks/card/__title/card__title.css
+++ b/src/blocks/card/__title/card__title.css
@@ -4,4 +4,6 @@
   font-size: 24px;
   line-height: 29px;
   font-weight: 900;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
