--- a/src/blocks/popup/__form/popup__form.css
+++ b/src/blocks/popup/__form/popup__form.css
@@ -3,13 +3,11 @@
   display: flex;
   flex-direction: column;
   padding: 26px 36px 37px;
-  height: 182px;
   justify-content: space-between;
 }
 
 @media  screen and (max-width: 525px){
   .popup__form{
-    height: 205px;
     padding: 43px 22px 25px;
   }
 }
